# bin_PROGRAMS=bluez_js
# bluez_js_SOURCES=bluez_js.c bluez_js.1 xmalloc.c system.h aclocal.m4 getopt.c getopt1.c getopt.h

#  uncomment the following if bluez_js requires the math library
#bluez_js_LDADD=-lm

# EXTRA_DIST=bluez_js.lsm.in bluez_js.spec.in bluez_js.texinfo

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

#  build and install the .info pages
# info_TEXINFOS = bluez_js.texinfo
bluez_js_TEXINFOS = gpl.texinfo

#  install the man pages
# man_MANS=bluez_js.1

SUBDIRS = src
ACLOCAL_AMFLAGS= -I m4

